--- a/project/proposal/overview.ipynb
+++ b/project/proposal/overview.ipynb
@@ -34,28 +34,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.160991e-07</td>\n",
+       "      <td>4.160992e-07</td>\n",
        "      <td>3.781813e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.624043e-07</td>\n",
-       "      <td>6.982162e-07</td>\n",
+       "      <td>7.624045e-07</td>\n",
+       "      <td>6.982165e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.471867e-07</td>\n",
-       "      <td>7.656267e-07</td>\n",
+       "      <td>7.471869e-07</td>\n",
+       "      <td>7.656270e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3.816448e-07</td>\n",
-       "      <td>5.466306e-07</td>\n",
+       "      <td>3.816447e-07</td>\n",
+       "      <td>5.466310e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-2.887286e-08</td>\n",
-       "      <td>2.624305e-07</td>\n",
+       "      <td>-2.887266e-08</td>\n",
+       "      <td>2.624309e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -64,12 +64,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1323114</th>\n",
-       "      <td>-1.085932e-01</td>\n",
+       "      <td>-1.085933e-01</td>\n",
        "      <td>-1.418040e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1323115</th>\n",
-       "      <td>-1.056413e-01</td>\n",
+       "      <td>-1.056414e-01</td>\n",
        "      <td>-1.382499e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -84,7 +84,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1323118</th>\n",
-       "      <td>-9.747788e-02</td>\n",
+       "      <td>-9.747791e-02</td>\n",
        "      <td>-1.274056e-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -94,17 +94,17 @@
       ],
       "text/plain": [
        "            channel-1     channel-2\n",
-       "0        4.160991e-07  3.781813e-07\n",
-       "1        7.624043e-07  6.982162e-07\n",
-       "2        7.471867e-07  7.656267e-07\n",
-       "3        3.816448e-07  5.466306e-07\n",
-       "4       -2.887286e-08  2.624305e-07\n",
+       "0        4.160992e-07  3.781813e-07\n",
+       "1        7.624045e-07  6.982165e-07\n",
+       "2        7.471869e-07  7.656270e-07\n",
+       "3        3.816447e-07  5.466310e-07\n",
+       "4       -2.887266e-08  2.624309e-07\n",
        "...               ...           ...\n",
-       "1323114 -1.085932e-01 -1.418040e-01\n",
-       "1323115 -1.056413e-01 -1.382499e-01\n",
+       "1323114 -1.085933e-01 -1.418040e-01\n",
+       "1323115 -1.056414e-01 -1.382499e-01\n",
        "1323116 -1.047818e-01 -1.344915e-01\n",
        "1323117 -1.026496e-01 -1.309742e-01\n",
-       "1323118 -9.747788e-02 -1.274056e-01\n",
+       "1323118 -9.747791e-02 -1.274056e-01\n",
        "\n",
        "[1323119 rows x 2 columns]"
       ]
@@ -122,6 +122,27 @@
     "data, samplerate = sf.read('..\\\\data\\\\train\\\\000000.ogg')\n",
     "df = pd.DataFrame(data, columns = ['channel-1','channel-2'])\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eacdb8b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44100"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samplerate"
    ]
   },
   {
