--- a/project/proposal/ref.bib
+++ b/project/proposal/ref.bib
@@ -211,3 +211,19 @@
  title={Music classification}, 
  url={https://www.kaggle.com/c/kaggle-pog-series-s01e02/overview}, 
 } 
+
+@techreport{Peeters2004,
+  added-at = {2010-01-28T22:00:35.000+0100},
+  author = {Peeters, Geoffroy},
+  biburl = {https://www.bibsonomy.org/bibtex/2730f3af81ec228afe946a8f1e57810e5/zazi},
+  description = {The Bibliography of my Belegarbeit},
+  institution = {{Icram}},
+  interhash = {79d35268e89537575a9a9436735e6d21},
+  intrahash = {730f3af81ec228afe946a8f1e57810e5},
+  keywords = {imported},
+  owner = {zazi},
+  timestamp = {2010-01-28T22:00:37.000+0100},
+  title = {{A large set of audio features for sound description (similarity
+    and classification) in the CUIDADO project}},
+  year = 2004
+}
